Renamed use case classes as interactors in keeping with the most commonly used terminology in Clean Architecture.

--- a/bookstore-service-rest-api/pom.xml
+++ b/bookstore-service-rest-api/pom.xml
@@ -58,6 +58,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.improving</groupId>
+            <artifactId>bookstore-service-domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.improving</groupId>
+            <artifactId>bookstore-service-data</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
