--- a/bookstore-service-data/pom.xml
+++ b/bookstore-service-data/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.mmbishop</groupId>
+            <artifactId>gwt-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <parent>
