--- a/bookstore-service-domain/pom.xml
+++ b/bookstore-service-domain/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.mmbishop</groupId>
+            <artifactId>gwt-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
