--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
                 <artifactId>junit-jupiter</artifactId>
                 <version>5.5.2</version>
             </dependency>
+            <dependency>
+                <groupId>io.github.mmbishop</groupId>
+                <artifactId>gwt-test</artifactId>
+                <version>1.0.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
